fixed css so that it wont look weird on mobile devices

--- a/css/home.css
+++ b/css/home.css
@@ -87,56 +87,10 @@ footer {grid-area: footer-grid; background: rgb(49, 49, 49);}
   "footer-grid     footer-grid     footer-grid";
 }
 
-@media screen
-  and (min-width: 641px)
-  and (max-width: 900px)  {
-  .container {
-  grid-template-columns:
-    1fr 1fr;
-  grid-template-areas:
-    "head-grid head-grid"
-    "nav-grid nav-grid"
-    "main-grid main-grid"
-    "footer-grid footer-grid";
-  }
-}
-
-@media screen and (max-width: 640px)  {
-  .container {
-  grid-template-columns:
-     1fr;
-  grid-template-areas:
-    "head-grid"
-    "nav-grid"
-    "main-grid"
-    "footer-grid";
-  }
-  nav ul {
-    flex-flow: column nowrap;
-    text-align: center;
-  }
-  nav ul li a {
-    display: block;
-    padding: 20px 40px;
-    margin: 5px;
-  }
-  nav ul li a:hover {
-    background: rgb(255, 145, 0);
-  }
-}
-
 .flexbox {
   display: flex;
   justify-content: center;
   flex-direction: row;
-}
-
-@media screen and (max-width: 640px)  {
-  .flexbox {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
 }
 
 nav ul li a {
@@ -185,4 +139,62 @@ ul li {
 
 li ul{
   margin-left: 2em;
+}
+
+@media screen
+  and (min-width: 641px)
+  and (max-width: 900px)  {
+  .container {
+  grid-template-columns:
+    1fr 1fr;
+  grid-template-areas:
+    "head-grid head-grid"
+    "nav-grid nav-grid"
+    "main-grid main-grid"
+    "footer-grid footer-grid";
+  }
+  nav ul {
+    flex-flow: column nowrap;
+    text-align: center;
+  }
+  nav ul li a {
+    display: block;
+    padding: 20px 40px;
+    margin: 5px;
+  }
+  nav ul li a:hover {
+    background: rgb(255, 145, 0);
+  }
+}
+
+@media screen and (max-width: 640px)  {
+  .container {
+  grid-template-columns:
+     1fr;
+  grid-template-areas:
+    "head-grid"
+    "nav-grid"
+    "main-grid"
+    "footer-grid";
+  }
+  nav ul {
+    flex-flow: column nowrap;
+    text-align: center;
+  }
+  nav ul li a {
+    display: block;
+    padding: 20px 40px;
+    margin: 5px;
+  }
+  nav ul li a:hover {
+    background: rgb(255, 145, 0);
+  }
+}
+
+@media screen and (max-width: 640px)  {
+  .flexbox {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
 }
